# zeta-android-builder

./: .gitignore  README.md  Zeta_APK_Builder.ipynb  colab_build.ipynb  colab_build.py  pyproject.toml  requirements.txt
.github/workflows/: android-build.yml  android.yml  build.yml
src/zeta_app/: __init__.py  app.py
